<resources>
    <string name="app_name">ListaDeCompras</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Registrate</string>
    <string name="btnVolver">Volver</string>
    <string name="btnComezarCompra">Nueva lista de compras</string>
    <string name="btnAdivinar">Adivinar</string>
    <string name="btnContar">Contar</string>
    <string name="btnConsultarCompras">» Consultar Compras</string>
    <string name="btnConsultarProducto">Consultar producto «</string>
    <string name="btnSobreMi">Sobre Mi</string>
    <string name="txtNombre">Ezequiel Rosso</string>
    <string name="txtGithub">https://github.com/henchit0/Istic-Android-ejercicios</string>
    <string name="txtMail">erosso@iiconcepcion.edu.ar</string>
    <string name="txtLegajo">Legajo: 2767</string>
    <string name="txtMsjAyuda1">• Presiona Jugar para comenzar</string>
    <string name="txtMsjAyuda2">• El numero secreto va de 1 a 50</string>
    <string name="txtMsjAyuda3">• Tienes 5 intentos para adivinar el numero</string>
    <string name="txtMsjAyudaContador">• Presiona el boton cada vez que quieras contar</string>
    <string name="title_activity_about_me">AboutMe</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>